[tool.poetry]
name = "lysia"
version = "2024.1.0"
description = "A discord lib."
authors = ["SubeCraft"]
license = "MIT"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed"
]

packages = [{include = "lysia"}]

[tool.poetry.urls]
Homepage = "https://github.com/SubeCraft/Lysia"
Repository = "https://github.com/SubeCraft/Lysia"
"Bug Tracker" = "https://github.com/SubeCraft/Lysia/issues"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "0.25.1"
websockets = "12.0.0"
dataclass-wizard = "0.22.2"
colorlog = "6.7.0"

[tool.poetry.group.dev.dependencies]
taskipy = "1.12.0"
pyright = "1.1.334"
ruff = "0.1.3"

[tool.poetry.group.doc.dependencies]
sphinx = "7.2.6"
furo = "2023.9.10"
myst-parser = "2.0.0"

[tool.taskipy.settings]
runner = "poetry run"

[tool.taskipy.tasks]
lint = {cmd = "ruff check lysia --preview --fix -e && pyright", help = "Lint, Format & Type Check the project."}

doc = {cmd = "sphinx-build doc doc_lysia", help = "Generate the HTML documentation files."}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
